--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "fastandfresh",
-    "version": "0.1.3",
+    "version": "0.1.4",
     "author": "Helicoid Technology LLP",
     "homepage": "http://helicoid.in",
     "private": true,
@@ -27,6 +27,7 @@
         "@ionic-native/splash-screen": "4.3.2",
         "@ionic-native/status-bar": "4.3.2",
         "@ionic/storage": "^2.1.3",
+        "angular-svg-round-progressbar": "^1.2.1",
         "cordova-android": "^6.2.3",
         "cordova-plugin-device": "^1.1.4",
         "cordova-plugin-geolocation": "^3.0.0",
