--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "fastandfresh",
-    "version": "0.1.5",
+    "version": "0.1.8",
     "author": "Helicoid Technology LLP",
     "homepage": "http://helicoid.in",
     "private": true,
@@ -24,6 +24,7 @@
         "@ionic-native/device": "^4.5.0",
         "@ionic-native/geolocation": "^4.4.2",
         "@ionic-native/google-maps": "^4.4.2",
+        "@ionic-native/native-geocoder": "^4.5.2",
         "@ionic-native/splash-screen": "4.3.2",
         "@ionic-native/status-bar": "4.3.2",
         "@ionic/storage": "^2.1.3",
@@ -33,6 +34,7 @@
         "cordova-plugin-geolocation": "^3.0.0",
         "cordova-plugin-googlemaps": "^2.1.1",
         "cordova-plugin-ionic-webview": "^1.1.16",
+        "cordova-plugin-nativegeocoder": "^2.0.4",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-whitelist": "^1.3.1",
         "cordova-sqlite-storage": "^2.1.2",
@@ -63,7 +65,8 @@
             "cordova-plugin-googlemaps": {
                 "API_KEY_FOR_ANDROID": "AIzaSyB1rUTn5EBwBWlxMNRXakeLiiBUYLPkykY"
             },
-            "cordova-sqlite-storage": {}
+            "cordova-sqlite-storage": {},
+            "cordova-plugin-nativegeocoder": {}
         },
         "platforms": [
             "android"
